--- a/full-design-image-editting-project/src/css/_components.css
+++ b/full-design-image-editting-project/src/css/_components.css
@@ -60,7 +60,7 @@
    CARD
    =============================== */
 .card {
-   width: 296.39px;
+   max-width: 296.39px;
    padding: var(--gutter-md);
    background: var(--color-white);
    border: 1px solid var(--bg-light);
